[package]
name = "midi-van"
version = "0.1.0"
edition = "2024"

[dependencies]
midir = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
midly = "0.5"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
